--- a/app/src/main/res/layout/fragment_live_map.xml
+++ b/app/src/main/res/layout/fragment_live_map.xml
@@ -9,15 +9,15 @@
         android:id="@+id/mapTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
         android:background="#F5901A"
+        android:fontFamily="sans-serif-thin"
+        android:padding="12dp"
         android:text="Live Disaster Map"
-        android:fontFamily="@font/dongle"
-        android:textStyle="bold"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30sp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"/>
+
+        app:layout_constraintTop_toTopOf="parent" />
 
     <org.osmdroid.views.MapView
         android:id="@+id/osmmap"
