added terms and condition inside the app

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -336,10 +336,12 @@
                 android:padding="8dp">
 
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_tracker" />
-
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_history" />
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_suggestion" />
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_password" />
+
+                <include layout="@layout/item_profile_menu" android:id="@+id/menu_terms" />
+
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_delete" />
                 <include layout="@layout/item_profile_menu" android:id="@+id/menu_logout" />
             </LinearLayout>
