--- a/app/src/main/res/layout/donation_details.xml
+++ b/app/src/main/res/layout/donation_details.xml
@@ -9,8 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        >
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/txtHeader"
@@ -56,63 +55,105 @@
             android:layout_marginTop="20dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
-            app:layout_constraintTop_toBottomOf="@id/separatorLine"> <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="15dp">
+            app:layout_constraintTop_toBottomOf="@id/separatorLine">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:orientation="vertical"
+                android:padding="15dp">
 
-                <ImageView
-                    android:id="@+id/detailsImage"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_food"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/bg"
-                    android:padding="5dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/detailsImage"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_food"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/bg"
+                        android:padding="5dp"/>
+
+                    <TextView
+                        android:id="@+id/detailsTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/dongle"
+                        android:text="@string/food"
+                        android:textColor="@android:color/black"
+                        android:textSize="32sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/detailsStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/status_red"
+                        android:fontFamily="@font/dongle"
+                        android:paddingStart="8dp"
+                        android:paddingTop="2dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="2dp"
+                        android:text="@string/critical"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/detailsTitle"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/detailsDescription"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/dongle"
-                    android:text="@string/food"
-                    android:textColor="@android:color/black"
-                    android:textSize="32sp"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/dongle_light"
+                    android:text="Rice, noodles, and canned goods for nourishment."
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/detailsStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/status_red"
-                    android:fontFamily="@font/dongle"
-                    android:paddingStart="8dp"
-                    android:paddingTop="2dp"
-                    android:paddingEnd="8dp"
-                    android:paddingBottom="2dp"
-                    android:text="@string/critical"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="13sp" /> </LinearLayout>
+        <LinearLayout
+            android:id="@+id/reliefPackContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="15dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/cardCategory">
 
-            <TextView
-                android:id="@+id/detailsDescription"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/dongle_light"
-                android:text="Rice, noodles, and canned goods for nourishment."
-                android:textSize="14sp" />
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:hint="Number of Packs">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPackQuantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:hint="Specific Contents of the Pack (e.g., 2kg rice, 3 canned goods)">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPackContents"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:lines="4"
+                    android:gravity="top" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/itemInputsContainer"
@@ -120,14 +161,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/cardCategory"/>
+            app:layout_constraintTop_toBottomOf="@id/reliefPackContainer"/>
 
         <Button
             android:id="@+id/btnAddCustomItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:backgroundTint="#27869B"
@@ -135,13 +175,9 @@
             android:text="@string/add_custom_item"
             android:textAllCaps="false"
             android:textColor="#000000"
-            android:textColorLink="#F3F0F0"
             android:textSize="20sp"
             app:cornerRadius="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/itemInputsContainer"
-            app:strokeColor="#F8F8F8" />
+            app:layout_constraintTop_toBottomOf="@id/itemInputsContainer" />
 
         <LinearLayout
             android:id="@+id/customItemInputLayout"
@@ -151,9 +187,7 @@
             android:layout_marginTop="10dp"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/btnAddCustomItem">
-
         </LinearLayout>
-
 
         <Button
             android:id="@+id/btnStep3"
@@ -175,5 +209,4 @@
             app:layout_constraintTop_toBottomOf="@id/customItemInputLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
